# stt-exe-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: harness.py  metrics.py  report.py
benchmark/corpora/: fetch.py
benchmark/engines/: base.py  faster_whisper.py  moonshine.py  sherpa_onnx.py  vosk.py  whispercpp.py
benchmark/results/: REPORT.html  REPORT.md  faster_whisper__base.en.jsonl  faster_whisper__small.en.jsonl  faster_whisper__tiny.en.jsonl  moonshine__moonshine_tiny.jsonl  sherpa_onnx__parakeet-tdt-0.6b-v2.jsonl  vosk__vosk-model-small-en-us-0.15.jsonl  whispercpp__base.en.jsonl  whispercpp__tiny.en.jsonl
infra/: EXE_NOTES.md  bootstrap.sh
